--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -35,47 +35,34 @@ color: #434da1;
 
 .col-md-7 {
   font-family: "Arial Black", Gadget, sans-serif;
-}
-
-.col-md-1 {
-  font-family: "Arial Black", Gadget, sans-serif;
-  color: #434da1;
-  font-size: 70px;
-  padding-right: 100px;
+  padding-bottom: -20px;
 }
 
 .col-md-5 {
   font-family: "Arial Black", Gadget, sans-serif;
   color: white;
+  padding-bottom: -20px;
 }
 
 .col-sm-9 {
   font-family: "Arial Black", Gadget, sans-serif;
+  padding-bottom: -20px;
 }
 
 .col-xs-15 {
   font-family: "Arial Black", Gadget, sans-serif;
+  padding-bottom: -20px;
 }
 
 .col-sm-4 {
   font-family: "Arial Black", Gadget, sans-serif;
   color: #434da1;
-  font-size: 70px;
-  padding-right: 100px;
-}
-
-.col-xs-10 {
-  font-family: "Arial Black", Gadget, sans-serif;
-  color: #434da1;
-  font-size: 70px;
-  padding-right: 100px;
+  font-size: 90px;
+  padding-right: -100px;
+  padding-bottom: -15px;
 }
 
 .row {
   margin-top: 30px;
   margin-bottom: 30px
-}
-
-.img{
-  text-align: center;
 }
